--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -4,163 +4,164 @@
 {% load staticfiles %}
 
 {% block content %}
-     <div class="container-fluid">
-    {% if user.is_authenticated %}
-
-    <h1> <i class="zmdi zmdi-shape"> </i>Ver Material  </h1>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card-box">
-                    <div class="row">
-                        <div class="col-4">
-                            <br>
-                            <a href="{% url 'material:crear' %}"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Nuevo Material</button></a>
-                        </div>
-                        <div class="col-8">
-                            <div id="datatable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="datatable"></label></div>
-                        </div>
-                    </div>
-
-    <table class="table table-hover table-dark">
-    <tbody>
-
-
-<div class="content">
-
-                    <!-- Start Content-->
-                    <div class="container-fluid">
-
-                        <div class="row">
-                            <div class="col-12">
-
-
-                                    </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6"><div id="datatable_filter" class="dataTables_filter">
-
-                        </div>
-                        </div>
-                    </div>
+        {% if user.is_authenticated %}
     <div class="row">
-        <div class="col-sm-12">
-            <table id="datatable" class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed" role="grid" aria-describedby="datatable_info">
-
-                                        <thead>
-                                        <tr role="row">
-                                            <th scope="col">
-                                                Id
-                                            </th>
-                                            <th scope="col">
-                                                Nombre
-                                            </th>
-                                            <th scope="col">
-                                                Descripción
-                                            </th>
-                                            <th scope="col">
-                                                Ajustes
-                                            </th>
-                                        </thead>
-
-
-                                        <tbody>
-                                         {% for material in materiales %}
-
-                                        <tr role="row" class="odd">
-                                            <td tabindex="0" class="sorting_1">{{ material.id }}</td>
-                                            <td>{{ material.nombre }}</td>
-                                            <td>{{ material.descripcion }}</td>
-                                            <td>
-                                                <div class="btn-group">
-                                                    <button type="button" class="btn btn-secondary dropdown-toggle waves-effect" data-toggle="dropdown" aria-expanded="false"> <i class="mdi mdi-chevron-down"></i> </button>
-                                                    <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
-                                                        <!-- item-->
-                                                        <a href="#edit-modal-{{ material.id }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Editar</a>
-                                                        <!-- item-->
-                                                        <a href="#delete-modal-{{ material.id }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Eliminar</a>
-                                                    </div>
-                                                </div>
-                                            </td>
-
-
-                                        </tr>
-                                         {% endfor %}
-                                        </tbody>
-                                    </table>
+            <h1><i class="zmdi zmdi-shape"> </i>Ver Material </h1>
+            <div class="col-10">
+                                    <br>
+                                    <a href="{% url 'material:crear' %}">
+                                        <button type="button"
+                                                class="btn btn-bordred-success waves-effect  width-md waves-light">Nuevo
+                                            Material
+                                        </button>
+                                    </a>
                                 </div>
-                            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                    <br>
+                        <div class="card-box">
 
-    <!-- ##########View US39##### -->
-        {% for material in materiales %}
+                                <div align="left">
+                                    <div id="datatable_filter" class="dataTables_filter"><label>Search:<input
+                                            type="search" class="form-control form-control-sm" placeholder=""
+                                            aria-controls="datatable"></label></div>
+                                </div>
 
-        <div id="delete-modal-{{ material.id }}" class="modal-demo">
-            <button type="button" class="close" onclick="Custombox.modal.close();">
-                <span>×</span><span class="sr-only">Close</span>
-            </button>
-            <h4 class="custom-modal-title">Eliminar el material <span>{{ material.nombre }}</span>?</h4>
-            <div class="custom-modal-text">
-                Quieres eliminar el material {{ material.nombre }} permanentemente?
-                <form action="#" data-parsley-validate="" novalidate="">
-                    <div class="form-group text-right mb-0">
-                        <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
-                            <a href="{% url 'material:delete_material' material.id %}">Eliminar</a>
-                        </button>
-                        <button type="reset" class="btn btn-secondary waves-effect waves-light" onclick="Custombox.modal.close();">
-                            Cancelar
-                        </button>
+
+                            <table class="table table-hover table-dark">
+                                <tbody>
+
+
+                                <div class="content">
+
+                                    <!-- Start Content-->
+                                    <div class="container-fluid">
+
+                                        <div class="row">
+                                            <div class="col-12">
+
+
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 col-md-6">
+                                            <div id="datatable_filter" class="dataTables_filter">
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <table id="datatable"
+                                                   class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed"
+                                                   role="grid" aria-describedby="datatable_info">
+
+                                                <thead>
+                                                <tr role="row" align="center">
+                                                    <th scope="col">
+                                                        Id
+                                                    </th>
+                                                    <th scope="col">
+                                                        Nombre
+                                                    </th>
+                                                    <th scope="col">
+                                                        Descripción
+                                                    </th>
+                                                    <th scope="col">
+                                                        Cantidad
+                                                    </th>
+                                                    <th scope="col">
+                                                        Editar
+                                                    </th>
+                                                    <th scope="col">
+                                                        Eliminar
+                                                    </th>
+                                                </thead>
+
+
+                                                <tbody align="center">
+                                                {% for material in materiales %}
+
+                                                    <tr role="row" class="odd">
+                                                        <td tabindex="0" class="sorting_1">{{ material.id }}</td>
+                                                        <td>{{ material.nombre }}</td>
+                                                        <td>{{ material.descripcion }}</td>
+                                                        <td>{{ material.cantidad }}</td>
+                                                        <td><a
+                                                                href="{% url 'material:editar_material_view' material.id %}">
+                                                            <button class="btn btn-success"><i class="fas fa-edit"></i>
+                                                            </button>
+                                                        </a></td>
+                                                        <td><a href="#delete-modal-{{ material.id }}"
+                                                               data-animation="blur"
+                                                               data-plugin="custommodal"
+                                                               data-overlaycolor="#36404a">
+                                                            <button type="button" class="btn btn-danger"
+                                                                    data-toggle="modal"
+                                                                    data-target="#modalConfirmacion"><i
+                                                                    class="fas fa-trash"></i></button>
+                                                        </a></td>
+                                                    </tr>
+                                                {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+
+                                    <!-- ##########View US39##### -->
+                                    {% for material in materiales %}
+
+                                        <div id="delete-modal-{{ material.id }}" class="modal-demo">
+                                            <button type="button" class="close" onclick="Custombox.modal.close();">
+                                                <span>×</span><span class="sr-only">Close</span>
+                                            </button>
+                                            <h4 class="custom-modal-title">Eliminar el material
+                                                <span>{{ material.nombre }}</span>?</h4>
+                                            <div class="custom-modal-text">
+                                                Quieres eliminar el material {{ material.nombre }} permanentemente?
+                                                <form action="#" data-parsley-validate="" novalidate="">
+                                                    <div class="form-group text-right mb-0">
+                                                        <button class="btn btn-danger waves-effect waves-light mr-1"
+                                                                type="submit">
+                                                            <a href="{% url 'material:delete_material' material.id %}">Eliminar</a>
+                                                        </button>
+                                                        <button type="reset"
+                                                                class="btn btn-secondary waves-effect waves-light"
+                                                                onclick="Custombox.modal.close();">
+                                                            Cancelar
+                                                        </button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+
+                                        <!-- US39 -->
+
+
+
+
+                                    {% endfor %}
+
+
+                                </div> <!-- end row -->
+                                </tbody>
+                            </table>
+                        </div> <!-- container-fluid -->
                     </div>
-                </form>
-            </div>
-        </div>
-
-        <!-- US39 -->
-
-
-        <!-- #### US#34 #### -->
-        <div id="edit-modal-{{ material.id }}" class="modal-demo">
-            <button type="button" class="close" onclick="Custombox.modal.close();">
-                <span>×</span><span class="sr-only">Close</span>
-            </button>
-            <h4 class="custom-modal-title">Editar el material <span>{{ material.nombre }}</span>?</h4>
-            <div class="custom-modal-text">
-                Editar el material {{ material.nombre }}:
-                <form method="post" action="{% url "material:edit_material" material.id %}">
-                    {% csrf_token %}
-                    <div class="modal-body">
-                        {{ form.as_p }}
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" onclick="Custombox.modal.close();">Cancelar</button>
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                    </div>
-                </form>
-
-            </div>
-        </div>
-        <!-- #### US#34 #### -->
-
-        {% endfor %}
-
-
-                        </div> <!-- end row -->
-    </tbody>
-    </table>
-                    </div> <!-- container-fluid -->
-        </div>
                 </div>
             </div>
-        </div>
-    </div>
+            </div>
 
 
 
 
-{% else %}
-    <h1>No estas autenticado</h1>
-{% endif %}
+        {% else %}
+            <h1>No estas autenticado</h1>
+        {% endif %}
 
 
-        {% endblock %}
+{% endblock %}
 
 <!--######VIEW US38 #######-->
 
