--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -30,6 +30,7 @@
                     <th>Editar</th>
                     <th>Eliminar</th>
                     <th>Revisiones</th>
+                    <th>Estado ambulancia</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -52,6 +53,11 @@
                             <td><a href="{% url "revision:revisiones"  id=ambulancia.id %}"
                                    data-animation="blur" data-overlaycolor="#36404a">
                                 <button type="button" class=" btn btn-primary"><i class="fas fa-eye"></i>
+                                </button>
+                            </a></td>
+                            <td><a href="{% url "revision:revisiones_ambulancia"  id=ambulancia.id %}"
+                                   data-animation="blur" data-overlaycolor="#36404a">
+                                <button type="button" class=" btn btn-success"><i class="fas fa-ambulance"></i>
                                 </button>
                             </a></td>
                         </tr>
