--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -4,7 +4,7 @@
     <!--######## VIEW US41 ########-->
 
 
-    <h2>Historial de revisiones de inventarios</h2>
+    <h2>Historial de revisiones del estado de la ambulancia</h2>
 
     {% if  revisiones %}
         <div class="card-box">
@@ -52,7 +52,7 @@
                                 <div class="text-center">
                                     <h1 class="text-error">500</h1>
                                     <h3 class="mt-3 mb-2">Error de servidor</h3>
-                                    <p class="text-muted mb-3">No se encontro ninguna revision de esta ambulancia.
+                                    <p class="text-muted mb-3">No se encontro ninguna revision del ESTADO de esta ambulancia.
                                         Consultar a administrador </p>
 
                                     <a href="/index/"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
