--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -38,8 +38,7 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">De
-                                            acuerdo
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
                                         </button>
                                     </div>
                                 </div>
@@ -56,8 +55,9 @@
                         <p>Si sales ahora no se guardarán los cambios de la unidad</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
                         <a href="/ambulancia/ver/" class="btn btn-primary">Salir sin guardar</a>
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                             <p>Se han guardado los cambios en la unidad</p>
                         </div>
                         <div class="modal-footer">
-                            <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-success">De acuerdo</a>
+                            <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-success">Aceptar</a>
                         </div>
                     </div>
                 </div>
