--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -5,8 +5,8 @@
     <div class="container-fluid">
         <h1>Unidad</h1>
         <div class="row">
-            <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder="Buscar Unidad..."
+            <div id="datatable_filter" ><label>Buscar Unidad:<input
+                    type="search" class="form-control form-control-sm" placeholder="Escribe unidad"
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             {% if user.is_adminplus %}
